# timeseries-to-egt

./: .gitattributes  .gitignore  A.csv  CHANGELOG.md  README.md  Xk.csv  audit_notebooks.csv  gitattributes  gitignore  pyproject.toml  requirements-notebooks.txt
Codex/: Codex202509011806.md  Codex202509030309.md  CodexDoc20250904.md
data/: README.md
deprecated/: BIO_DEMO.ipynb  BIO_DEMO_nmf.ipynb  FIRM_DEMO.ipynb  FIRM_DEMO2.ipynb  PROTEST_DEMO.ipynb  PROTEST_DEMO_nmf.ipynb  README.md  README2.md  README3.md  SETI_DEMO.ipynb  SETI_DEMO_nmf.ipynb  SOCIO_DEMO.ipynb  SOCIO_DEMO_nmf.ipynb  egt_timeseries_demo.ipynb  finance_demo.ipynb  gameify_timeseries_basic.py  gameify_timeseries_finance.py  gameify_timeseries_finance_biology.py
dev/: open-code.sh  patch_readme_intro.sh
docs/: BIOLOGY.md  CAPITAL_LABOR.md  CYBERSECURITY.md  FINANCE.md  SOCIOLOGY.md  ts2eg_math_background.aux  ts2eg_math_background.blg  ts2eg_math_background.out  ts2eg_math_background.synctex  ts2eg_math_background.tex
examples/: demo_var_game.py
notebooks/: BIO_DEMO.ipynb  CYBER_DEMO.ipynb  FINANCE_DEMO.ipynb  FIRM_DEMO.ipynb  PROTEST_DEMO.ipynb  SOCIO_DEMO.ipynb  SOCIO_DEMO_nmf_clean.ipynb  egt_timeseries_demo.ipynb  egt_timeseries_demo_clean.ipynb  finance_demo_clean.ipynb
scripts/: audit_notebooks.py  init_git.ps1  init_git.sh  inject_readme_intro_exact.sh  nb_canonical_normalize.py  nb_fix_bio_demo.py  nb_fix_bio_imports.py  nb_fix_bio_nmf.py  nb_fix_cyber_imports.py  nb_fix_cyber_nmf.py  nb_fix_finance.py  nb_fix_finance_nmfshadow.py  nb_fix_firm.py  nb_fix_firm_canonical.py  (+19 more)
(+13 files in other folders)
